Nix empty Deprecation tables, Fix top header/nave alignment on wider screen

--- a/docs/css/alt.css
+++ b/docs/css/alt.css
@@ -1,5 +1,6 @@
 
-.altStyle div.c-container{
+.altStyle div.c-container,
+.altStyle div.c-header__main{
 	max-width: 87%!important;
 }
 /* inline code badges inside table cells */
