--- a/docs/css/hm-code.css
+++ b/docs/css/hm-code.css
@@ -40,9 +40,16 @@ pre code {
 .innercodebox { padding-left: 5px; padding-right: 5px; }
 
 
-.altStyle div.c-container{
+
+.altStyle div.c-container,
+.altStyle div.c-header__main{
 	max-width: 87%!important;
 }
+
+.altStyle div.c-container div.c-navbar-brand{
+  top:auto;
+}
+
 /* inline code badges inside table cells */
 .altStyle .requiredNote{
   font-size: 0.75rem;
@@ -100,8 +107,10 @@ pre code {
 .av-toggle { display: inline-block; margin-top: 0.35rem; background: transparent; border: none; color: #0b62d1; cursor: pointer; font-size: 0.65rem; text-decoration: underline; padding: 0; font-weight: 600; font-family: 'Inter Variable', Helvetica, Arial, sans-serif; }
 .av-toggle:focus { outline: 2px solid #cfe; }
 
+.altStyle table { border: 2px solid #444a65; }
+.altStyle table .deprecated { border: 2px solid #818bb6; }
 /* Row Specific  */
-.altStyle table th { text-align: left; }
+.altStyle table th { text-align: left; background-color: #444a65!important; color: #ffffff; font-weight: 600; }
 .altStyle table td:nth-child(1) { font-family: monospace; }
 .altStyle table td:nth-child(2) { text-align: center; color: #00000061; }
 .altStyle table td:nth-child(2) i:hover { color: #00000091; }
